# vector-rag-powered-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  clean.sh  docker-compose.yml  docker-entrypoint.sh  init.sh  pyproject.toml  startup.sh
.streamlit/: config.toml
app/: __init__.py  client.py
app/auth/: __init__.py
app/core/: __init__.py  models.py  rag_manager.py
app/infra/: __init__.py  background_client.py  bigquery.py  logger.py  metrics.py
app/interfaces/: __init__.py
app/interfaces/api/: __init__.py  api.py
app/interfaces/web/: __init__.py  frontend.py  streamlit_app.py
app/services/: __init__.py
app/utils/: persistent_auth.py  rag_profiles.py  rag_query_helpers.py
config/: requirements.txt
data/: regulon_index_dev_faiss_sentences.pkl  regulon_index_dev_sentences.pkl  regulon_index_prod_sentences.pkl
data/faiss_index/: index.faiss  index.pkl
scripts/: sync_index_data.py  warmup_services.py
